--- a/professeur/templates/professeur/professeur.html
+++ b/professeur/templates/professeur/professeur.html
@@ -1,85 +1,6 @@
-{% load static%}
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mon Etab - Élèves</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-    <style>
-         body{
-            display: flex;
-            /* justify-content: center; Centrage horizontal */
-            /* align-items: center; Centrage vertical */
-            height: 100vh; /* Hauteur du viewport */
-            margin: 0;
-            background-color: #f8f9fa;
-        }
-        .sidebar {
-    width: 250px;
-    background: #b6adad;
-    color:#0c0c0c;
-    padding: 15px;
-    /* position: fixed; */
-    height: 100%;
-}
-
-.sidebar h2 {
-    text-align: center;
-    margin-bottom: 30px;
-}
-
-.sidebar ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.sidebar ul li {
-    margin: 20px 0;
-}
-
-.sidebar ul li a {
-    color: #070707;
-    text-decoration: none;
-    font-size: 18px;
-    display: block;
-}
-
-.sidebar ul li a:hover {
-    color: #5833dd;
-    padding-left: 10px;
-    transition: 0.3s;
-}
-    </style>
-  </head>
-  <body>
-    <div class="sidebar">
-        <div class="logo" style="display: flex;">
-            <img src="{% static 'images/logo.png' %}" alt="" style="width: 50px; height: 50px;">
-            <h2>Mon Etab</h2>
-        </div>
-        
-        <hr style="background-color: #575757;">
-        <ul style="height: 420px;">
-            <li><a href="#"><i class="fas fa-tachometer-alt"></i> Tableau de Bord</a></li>
-            <li><a href="#"><i class="fas fa-user-graduate"></i> Éleve</a></li>
-            <li><a href="#"><i class="fas fa-chalkboard-teacher"></i> Professeurs</a></li>
-            <li><a href="#"><i class="fas fa-user-graduate"></i> Utilisateurs</a></li>
-            <li><a href="#"><i class="fas fa-id-badge"></i> Rapport</a></li>
-            
-            
-        </ul>
-        <hr>
-        <ul>
-            <li><a href="#"><i class="fa fa-sign-out" aria-hidden="true"></i> deconnexion</a></li>
-        </ul>
-        
-    </div>
+{%extends 'base.html'}
+{%block content%}
 
       <!-- Main Content -->
       <div class="flex-1 p-6">
@@ -207,9 +128,7 @@
           </table>
         </div>
       </div>
-    </div>
-  </body>
-</html>
+
 
 
 
@@ -222,3 +141,4 @@
     }
 }
 </script>
+{%endblock%}
