--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -23,7 +23,7 @@
           <!-- <form class="login-form"> -->
             <input type="text" placeholder="username"/>
             <input type="password" placeholder="password"/>
-            <button><a href="/eleve/home">login </a></button>
+            <button><a href="{% url 'dash:dash' %}">login </a></button>
             <p class="message">Not registered? <a href="#">Create an account</a></p>
           <!-- </form> -->
         </div>
