--- a/Rapport/templates/rapport/rapport.html
+++ b/Rapport/templates/rapport/rapport.html
@@ -1,10 +1,7 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+{% block content %}
     <style>
         button {
             padding: 5px 10px;
@@ -18,7 +15,7 @@
             width: 100%;    /* Largeur flexible */
             max-width: 300px; /* Largeur maximale de 300px */
             margin-bottom: 120px; 
-            margin-top: 85px;
+            
             
         }
         button[type="reset"] {
@@ -28,22 +25,17 @@
             color: #fff;
             cursor: pointer;
             font-size: 16px;
-           
             border: 3.5px solid #0c0c0c;
             width: 100%;    /* Largeur flexible */
             max-width: 300px; /* Largeur maximale de 300px */
             margin-bottom: 120px; 
-            margin-top: 85px;
+           
            
         }
         
         button:hover {
             opacity: 0.9;}
     </style>
-</head>
-<body style="display: flex;
-align-items: flex-start;
-justify-content: space-between;">
     <div class="form-group-right">
         <select id="classe" name="classe" style="width: 100%;    /* Largeur flexible */
         max-width: 300px; /* Largeur maximale de 300px */ margin-bottom: 120px; margin-top: 85px;
@@ -56,7 +48,8 @@ justify-content: space-between;">
            
         </select>
     </div>
-    <button type="submit">générer format PDF</button>
-    <button type="reset">Générer format Excel</button>
-</body>
-</html>
+    <div class="btn">
+        <button type="submit" name="formatPDF" class="annuler">generer format pdf</button>
+        <button type="submit" name="formatEXCEL" class="inscrire">generer format excel</button>
+    </div>
+{% endblock %}
