--- a/templates/professeur/list.html
+++ b/templates/professeur/list.html
@@ -67,7 +67,8 @@ button {
               <td>
                 <div style="display: flex;">
                   <button type="submit" name="modifier" class="inscrire"><a href="{% url 'professeur:update' teacher.id %}">Modifier</a></button>
-                  <button><a href="{% url 'professeur:delete' teacher.pk %}">Supprimer</a></button>
+                  <button type="submit" name="modifier" class="inscrire"><a href="{% url 'professeur:delete' teacher.id %}">Supprimer</button>
+
               </div>
               </td>
           </tr>
@@ -75,28 +76,7 @@ button {
       </tbody>
   </table>
 </div>
-<script src="scripte.js"></script>
-<script>
-  function confirmerSuppression(event) {
-      event.preventDefault(); // Empêche l'action par défaut du bouton
-  
-      // Afficher une boîte de confirmation
-      const confirmation = confirm("Attention, vous êtes sur le point de supprimer cet élève ! Voulez-vous vraiment continuer ?");
-  
-      // Si l'utilisateur clique sur "OK", la suppression est confirmée
-      if (confirmation) {
-          // Ajoutez ici le code pour supprimer l'élève
-          alert('L\'élève a été supprimé.');
-      } else {
-          // Si l'utilisateur clique sur "Annuler", la suppression est annulée
-          alert('Suppression annulée.');
-      }
-  }
-  
-  // Attacher l'événement de clic aux boutons "Supprimer"
-  document.querySelectorAll('button[style*="rgb(212, 21, 21)"]').forEach(button => {
-      button.addEventListener('click', confirmerSuppression);
-  });
-  </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 
 {%endblock%}
